# go2_ros2_sdk

./: README.md
coco_detector/: package.xml
docker/: Dockerfile  README.md  docker-compose.yml  temp
docker/data/: frames_2026-06-12_20.26.32.gv  my_map.pgm  my_map.ply  my_map.yaml
go2_dashboard/: CMakeLists.txt  package.xml
go2_dashboard/launch/: web_ui.launch.py
go2_dashboard/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
go2_dashboard/web/src/: App.css  App.tsx  vite-env.d.ts
go2_dashboard/web/src/components/: CameraFeed.tsx  ConnectionCard.tsx  ControlsCard.tsx  MapCanvas.tsx  PointCloudViewer.tsx  SemanticNavCard.tsx  TopBar.tsx  VisualizationPanel.tsx
go2_dashboard/web/src/context/: RosContext.tsx
go2_dashboard/web/src/lib/: cameraUtils.ts  mapUtils.ts  pointCloudRenderer.ts  pointCloudUtils.ts  rosMessages.ts
go2_interfaces/: CMakeLists.txt
go2_interfaces/srv/: ListDetectedObjects.srv  NavigateToObject.srv
go2_robot_sdk/: package.xml  setup.py
go2_robot_sdk/config/: mapper_params_online_async.yaml  nav2_params.yaml  semantic_nav_params.yaml
go2_robot_sdk/go2_robot_sdk/application/utils/: detection_localizer.py
go2_robot_sdk/go2_robot_sdk/infrastructure/ros2/: ros2_publisher.py
go2_robot_sdk/go2_robot_sdk/infrastructure/sensors/: lidar_decoder.py
go2_robot_sdk/go2_robot_sdk/presentation/: detection_navigator_node.py  proximity_to_laserscan_node.py
go2_robot_sdk/launch/: mapping.launch.py  navigation.launch.py  sensor_fusion.py
go2_robot_sdk/scripts/: ply_to_occupancy_map.py
lidar_processor_cpp/: CMakeLists.txt
lidar_processor_cpp/include/lidar_processor_cpp/: laser_scan_merger_node.hpp  lidar_to_pointcloud_node.hpp  pointcloud_aggregator_node.hpp
lidar_processor_cpp/src/: laser_scan_merger_node.cpp  lidar_to_pointcloud_node.cpp  pointcloud_aggregator_node.cpp
